processed/gerrit/txt_full/13752.txt
Change:     13752
Subject:    LU-6242 utils: avoid gcc build errors for liblustreapi_util.c
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/13752
Change-Id:  Id93da79627180ec9df4baf73e5cacb11a6628297
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      James Simmons
Created:    2015-02-12 20:34:18.000000000
Updated:    2015-02-13 15:34:20.000000000
Patch Set:  2
Insertions: +2
Deletions:  -2
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Jian Yu, Bob Glossman, Dmitry Eremin, Patrick Farrell, Frank Zago

--- Commit Message ---
LU-6242 utils: avoid gcc build errors for liblustreapi_util.c

If the flag warn-unused-results is set for gcc then
liblustre_util.c will fail to build due to the return
value of read() being ignored.

Change-Id: Id93da79627180ec9df4baf73e5cacb11a6628297
Signed-off-by: James Simmons <uja.ornl@gmail.com>

--- Review History ---

--- Message (James Simmons, 2015-02-12 20:34:18.000000000) ---
Uploaded patch set 1.

--- Message (James Simmons, 2015-02-12 20:36:39.000000000) ---
Patch Set 2: Commit message was updated

--- Message (wc-checkpatch, 2015-02-12 20:39:09.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Frank Zago, 2015-02-12 20:39:10.000000000) ---
Patch Set 2:

I have a very similar fix: http://review.whamcloud.com/13654/

In this one, rc is ignored, which may make some static checkers complain.

--- Message (Jenkins, 2015-02-12 20:51:17.000000000) ---
Patch Set 1:

Build Started https://build.hpdd.intel.com/job/lustre-reviews/30336/

--- Message (Jenkins, 2015-02-12 21:05:47.000000000) ---
Patch Set 1: Verified-1

Build Failed 
 
https://build.hpdd.intel.com/job/lustre-reviews/30336/ : FAILURE

--- Message (Jenkins, 2015-02-12 21:05:48.000000000) ---
Patch Set 2:

Build Started https://build.hpdd.intel.com/job/lustre-reviews/30337/

--- Message (Jenkins, 2015-02-12 21:20:23.000000000) ---
Patch Set 2: Verified-1

Build Failed 
 
https://build.hpdd.intel.com/job/lustre-reviews/30337/ : FAILURE

--- Message (Jian Yu, 2015-02-13 01:28:37.000000000) ---
Patch Set 2:

liblustreapi_util.c: In function 'liblustreapi_init':
 liblustreapi_util.c:69:25: error: variable 'rc' set but not used [-Werror=unused-but-set-variable]
    unsigned int rnumber, rc;
                         ^

Hi James,

The patch http://review.whamcloud.com/13654 from Frank fixed the same issue.

--- Message (James Simmons, 2015-02-13 15:34:20.000000000) ---
Abandoned
